Closed Bug 545113 Opened 15 years ago Closed 15 years ago

Compiling for MIPS fails during linking

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect, P2)

All
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED
flash10.1

People

(Reporter: brbaker, Assigned: rreitmai)

References

Details

(Whiteboard: fixed-in-nanojit, fixed-in-tamarin, fixed-in-tracemonkey)

Attachments

(1 file)

Compiling tamarin-redux for MIPS fails during linking with the following error: ./libavmplus.a(Assembler.o): In function `nanojit::Assembler::gen(nanojit::LirFilter*)': Assembler.cpp:(.text+0x4e14): undefined reference to `nanojit::Assembler::asm_q2i(nanojit::LIns*)' Assembler.cpp:(.text+0x4e1c): undefined reference to `nanojit::Assembler::asm_q2i(nanojit::LIns*)' * Requires additional patch from bug 524129, https://bug524129.bugzilla.mozilla.org/attachment.cgi?id=425969 * Using mips-linux-gnu-g++ (Sourcery G++ Lite 4.3-154) 4.3.3 >$ ../configure.py --enable-shell --target=mips-linux
Flags: flashplayer-triage+
Flags: flashplayer-qrb?
Assignee: nobody → rreitmai
Status: NEW → ASSIGNED
Flags: flashplayer-qrb? → flashplayer-qrb+
Priority: -- → P2
Target Milestone: --- → flash10.2
QRB: I understand that this is not needed for 10.1, current milestone is 10.2, but this really needs to get fixed ASAP so that we can start compiling the MIPS shell so that it does not go stale... again.
Passes nanojit regression test
Attachment #426035 - Flags: review?
Target Milestone: flash10.2 → flash10.1
Attachment #426035 - Flags: review? → review+
Whiteboard: fixed-in-nanojit
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tamarin
Whiteboard: fixed-in-nanojit, fixed-in-tamarin → fixed-in-nanojit, fixed-in-tamarin, fixed-in-tracemonkey
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: