Bug 545113 - Compiling for MIPS fails during linking (r+rreitmai) [c.dearman]

Compiling tamarin-redux for MIPS fails during linking with the following error:

./libavmplus.a(Assembler.o): In function
`nanojit::Assembler::gen(nanojit::LirFilter*)':
Assembler.cpp:(.text+0x4e14): undefined reference to
`nanojit::Assembler::asm_q2i(nanojit::LIns*)'
Assembler.cpp:(.text+0x4e1c): undefined reference to
`nanojit::Assembler::asm_q2i(nanojit::LIns*)'

--HG--
extra : convert_revision : 63fda420c52dbe5b328e978ebe50c297ff2cb729